--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -2,7 +2,7 @@
 title: Welcome to Middleman
 ---
 
-.welcome
-  %h1 Middleman is Watching
-  %p.doc
-    = link_to "Read Online Documentation", "http://middlemanapp.com/"
+.room
+
+.itemPalette
+.trash
