--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -11,6 +11,8 @@
       = data.page.title || "The Middleman"
 
     = stylesheet_link_tag "normalize", "all"
+
+    = javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"
     = javascript_include_tag  "all"
 
   %body(class=page_classes)
