--- a/source/stylesheets/all.css.styl
+++ b/source/stylesheets/all.css.styl
@@ -1,6 +1,10 @@
 @import "room"
 @import "editor"
 
+html
+  height 100%
+
 body
   background #d4d4d4 url("../images/background.png")
   font-family sans-serif
+  height 100%
