Consolidating backbone editor stuff, touches kind of working

--- a/source/stylesheets/editor.styl
+++ b/source/stylesheets/editor.styl
@@ -15,7 +15,8 @@
   padding 4px
 
 .trash
-  background-color black
+  background-image url("/images/dumper.png")
+  background-size 100%
   position absolute
   bottom 0
   right 0
