Added tool delegation

--- a/source/stylesheets/editor.styl
+++ b/source/stylesheets/editor.styl
@@ -23,6 +23,28 @@
   margin 4px
   padding 4px
 
+.toolbar
+  bottom 0
+  left 0
+
+  display inline-block
+
+  height 40px
+
+  padding 4px
+  position absolute
+
+.tool
+  border-color transparent
+  border-width
+  display inline-block
+
+  height 32px
+  width 32px
+
+  &:active
+    border-color blue
+
 .trash
   background-image url("/images/dumper.png")
   background-size 100%
