Saving json, titles

--- a/source/stylesheets/editor.styl
+++ b/source/stylesheets/editor.styl
@@ -1,6 +1,6 @@
 backgroundColor = #BBB
 
-.item
+.item, .tool, input
   pointer-events auto
 
 .editor
@@ -41,8 +41,6 @@ backgroundColor = #BBB
 .tool
   border 2px solid transparent
   display inline-block
-
-  pointer-events auto
 
   height 32px
   width 32px
