Editor save action

--- a/source/stylesheets/editor.styl
+++ b/source/stylesheets/editor.styl
@@ -1,6 +1,6 @@
 backgroundColor = #BBB
 
-.item, .tool, input
+.item, .tool, input, button
   pointer-events auto
 
 .editor
@@ -8,6 +8,11 @@ backgroundColor = #BBB
   width 100%
 
   pointer-events none
+
+.actions
+  position absolute
+  top 0
+  left 98px
 
 .itemPalette
   background-color backgroundColor
