Saving, text tools

--- a/source/stylesheets/editor.styl
+++ b/source/stylesheets/editor.styl
@@ -1,6 +1,4 @@
-backgroundColor = #BBB
-
-.item, .tool, input, button
+.item, .tool, input, button, textarea
   pointer-events auto
 
 .editor
@@ -30,6 +28,18 @@ backgroundColor = #BBB
   display inline-block
   margin 4px
   padding 4px
+
+.instanceText
+  position absolute
+  bottom 0
+  left 0
+  right 0
+  width roomWidth
+  margin auto
+
+  textarea
+    display block
+    width 100%
 
 .toolbar
   background-color backgroundColor
